GP stat! (c) David Fong, 2019

front-end to DailyMeasure package

Version 1.3.2, 18th September 2019
==================================

Improvements

* Quality Improvement Measures appointments view
  Uses separate package version of dMeasureQIM

* datatable_styled accepts arguments which allow
  selectable button extensions

* Remove DiabetesSIP and AsthmaSIP from default CDM list

  These items are no longer available for billing

Bug-fix

* Move demographic_group and ignoreOld in QIM Measures
  to 'common' titlebar area

  Having separate demographic_group buttons could cause
  a race-condition



Version 1.3.1, 8th September 2019
---------------------------------

* Requires dMeasure back-end 0.4.99

* Changes to billing display
  Integrates appointment, visit and billing view

* Bugfix : view Quality Improvement Measures failed if no open database