@@ -35,14 +35,16 @@ DailyMeasureUI <- function() {
                                  tabName = "billings", icon = shiny::icon("receipt")),
         shinydashboard::menuItem("CDM items",
                                  tabName = "cdm", icon = shiny::icon("file-medical-alt")),
-        shinydashboard::menuItem("PIP Quality Improvement",
-                                 tabName = "qim", icon = shiny::icon("chart-line")),
-        shinydashboard::menuItem("QIM Appointment",
-                                 tabName = "qimAppt", icon = shiny::icon("chart-line")),
+        shinydashboard::menuItemOutput("PIPqimMenu"),
+        # dynamically created PIP quality improvement menu items. could be blank!
+        # will be blank unless dMeasureQIM module/package is available
         shinydashboard::menuItem("Administration",
                                  tabName = "administration", icon = shiny::icon("microscope")),
         shinydashboard::menuItem("Configuration",
-                                 tabName = "configuration", icon = shiny::icon("wrench"))
+                                 tabName = "configuration", icon = shiny::icon("wrench"),
+                                 selected = TRUE
+                                 # this is a dummy entry and will be re-selected in the server
+                                 )
         # menuItem("Test", tabName = "test")
       )
     ),
@@ -172,136 +174,9 @@ DailyMeasureUI <- function() {
                       padding-top:7px;
                       }"))
       ),
-
-      tabItems(
-        tabItem(
-          tabName = "appointments",
-          fluidRow(column(width = 12, align = "center", h2("Appointments"))),
-          fluidRow(column(width = 12, appointments_datatableUI("appointments_dt")))
-        ),
-        tabItem(
-          tabName = "immunization",
-          fluidRow(column(width = 12, align = "center", h2("Immunization"))),
-          fluidRow(column(width = 12, vax_datatableUI("vax_dt")))
-        ),
-        tabItem(
-          tabName = "cancerscreen",
-          fluidRow(column(width = 12, align = "center", h2("Cancer screening"))),
-          fluidRow(column(width = 12, cancerscreen_datatableUI("cancerscreen_dt")))
-        ),
-        tabItem(
-          tabName = "billings",
-          fluidRow(column(width = 12, align = "center", h2("Billings"))),
-          fluidRow(column(width = 12, billings_datatableUI("billings_dt")))
-        ),
-        shinydashboard::tabItem(
-          tabName = "cdm",
-          shiny::fluidRow(column(width = 12, align = "center",
-                                 h2("Chronic Disease Management items"))),
-          shiny::fluidRow(column(width = 12,
-                                 cdm_datatableUI("cdm_dt")))
-        ),
-        shinydashboard::tabItem(
-          tabName = "qim",
-          #shiny::fluidRow(column(width = 12, align = "center",
-          #                       h2("Administration"))),
-          shiny::fluidRow(column(width = 12,
-                                 qim_UI("qim")))
-        ),
-        shinydashboard::tabItem(
-          tabName = "qimAppt",
-          #shiny::fluidRow(column(width = 12, align = "center",
-          #                       h2("Administration"))),
-          shiny::fluidRow(column(width = 12,
-                                 qim_UI("qimAppt")))
-        ),
-        shinydashboard::tabItem(
-          tabName = "administration",
-          #shiny::fluidRow(column(width = 12, align = "center",
-          #                       h2("Administration"))),
-          shiny::fluidRow(column(width = 12,
-                                 administration_UI("admin_dt")))
-        ),
-        shinydashboard::tabItem(
-          tabName = "configuration",
-          shiny::fluidRow(
-            shinydashboard::tabBox(
-              id = "tab_config",
-              title = "Configuration",
-              width = 12,
-              height = "85vh",
-              shiny::tabPanel(
-                # sqlite configuration file location
-                # this is stored in a YAML file
-                # allows a 'local' user to use a remote configuration file
-                title = "Configuration file",
-                value = "ConfigLocation",
-                shiny::column(
-                  width=12,
-                  shiny::wellPanel(
-                    textOutput('configuration_file_details')
-                    # location of sqlite configuration file
-                  ),
-                  shiny::wellPanel(
-                    shinyFiles::shinyFilesButton(
-                      "choose_configuration_file",
-                      label = "Choose configuration file",
-                      title = "Choose configuration file (must end in '.sqlite')",
-                      multiple = FALSE),
-                    shinyFiles::shinySaveButton(
-                      "create_configuration_file",
-                      label = "Create configuration file",
-                      title = "Create configuration file (must end in '.sqlite')",
-                      filetype = list(sqlite = c('sqlite'))),
-                    shiny::helpText(paste("Choose location of an existing configuration file,",
-                                          "or create a new configuration file"))
-                  ))
-              ),
-              shiny::tabPanel(
-                # Microsoft SQL server details
-                title = "Microsoft SQL Server details",
-                value = "ServerPanel",
-                shiny::column(width = 12,
-                              servers_datatableUI("servers_dt"))
-              ),
-              shiny::tabPanel(
-                # Microsoft SQL server details
-                title = "Logging details",
-                value = "LoggingPanel",
-                shiny::column(width = 12,
-                              logging_datatableUI("logging_dt"))
-              ),
-              shiny::tabPanel(
-                # Practice locations or groups
-                title = "Practice locations/groups",
-                value = "LocationsPanel",
-                shiny::column(width = 12,
-                              locations_datatableUI("locations_dt"))
-              ),
-              shiny::tabPanel(
-                # User settings and permissions
-                title = "User settings and permissions",
-                value = "UsersPanel",
-                shiny::column(width = 12,
-                              userconfig_datatableUI("userconfig_dt"))
-              ),
-              shiny::tabPanel(
-                # User password
-                title = "User Password Setting",
-                value = "PasswordPanel",
-                shiny::column(width = 12,
-                              passwordConfig_UI("password_config"))
-              )
-            )
-          )),
-        shinydashboard::tabItem(
-          tabName = "test",
-          shiny::fluidRow(shiny::column(width = 12, align = "center",
-                                        h2("Test frame"))),
-          shiny::fluidRow(shiny::column(width = 12,
-                                        DT::DTOutput("test_dt")))
-        )
-      )
+      shiny::uiOutput("tabItems")
+      # tabItems are dynamically generated in the server
+      # according to what modules/packages are available
     )
   )
 }
