@@ -2,6 +2,12 @@ GP stat! (c) David Fong, 2019
 
 front-end to DailyMeasure package
 
+
+Modularization
+
+* dMeasureQIM (quality improvement measures) is now an optional module/package
+  changes to UI and server to allow dynamic creation of tabItems and sidebarMenu
+
 Version 1.3.2, 18th September 2019
 ==================================
 
